Added Chemical Composition and ELNES

--- a/Spectroscopy/CH4_00-Spectroscopy.ipynb
+++ b/Spectroscopy/CH4_00-Spectroscopy.ipynb
@@ -38,12 +38,10 @@
     "* [Calculating Dielectric Function II: Silicon](CH4_06-DielectricDFT2.ipynb)\n",
     "\n",
     "**Core-Loss EELS**\n",
-    "* [Working with Cross-Sections](CH4_07-Working_with_X-Sections.ipynb)\n",
+    "* [Introduction to Core-Loss Spectroscopy](CH4_07-Introduction_Core_Loss.ipynb)\n",
     "* [Chemical Composition](CH4_08-Chemical_Composition.ipynb)\n",
     "* [Analysing Core-Loss Spectra](CH4_9-Analyse_Core_Loss.ipynb)\n",
-    "* [Electron Energy-Loss Near-Edge Structure](CH4_1-ELNES.ipynb)\n",
-    "* [Chemical Composition](CH4_11-Core_Loss.ipynb)\n",
-    "\n",
+    "* [Electron Energy-Loss Near-Edge Structure](CH4_10-ELNES.ipynb)\n",
     "\n",
     "## Electron Dispersive Spectrosocpy\n"
    ]
