--- a/Spectroscopy/CH4_07-Introduction_Core_Loss.ipynb
+++ b/Spectroscopy/CH4_07-Introduction_Core_Loss.ipynb
@@ -12,7 +12,8 @@
     "\n",
     "\n",
     "\n",
-    "# Working with X-Sections\n",
+    "# Introduction to Core-Loss Spectroscopy\n",
+    "<font size = \"5\">Working with X-Sections</font>\n",
     "\n",
     "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM/main/Spectroscopy/CH4_07-Working_with_X-Sections.ipynb)\n",
     " \n",
@@ -113,7 +114,7 @@
     "    if test_package('sidpy') < '0.0.5':\n",
     "        print('installing pyTEMlib')\n",
     "        !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
-    "    if test_package('pyTEMlib') < '0.2021.4.10':\n",
+    "    if test_package('pyTEMlib') < '0.2021.4.20':\n",
     "        print('installing pyTEMlib')\n",
     "        !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "# ------------------------------\n",
@@ -3758,7 +3759,16 @@
     "### Calculating EELS Cross Section\n",
     "\n",
     "EELS cross sections are dependent on the momentum transfer (angle dependence), while photons cannot transfer any momentum. The angle dependence of the cross-section is aproximated by the equation 4 in:\n",
-    "[Egerton Ultramicroscopy 50 (1993) 13-28](https://doi.org/10.1016/0304-3991(93)90087-E)"
+    "[Egerton Ultramicroscopy 50 (1993) 13-28](https://doi.org/10.1016/0304-3991(93)90087-E)\n",
+    "\n",
+    "The units of atom density in  electron microscopy is atoms per nm$^2$.\n",
+    "Cross sections are normally given in barns (a neutron scattering joke).\n",
+    "\n",
+    "A barn is 10$^{-28}$ m$^2$ which is then 1 barn = 10$^{-10}$ nm$^2$\n",
+    "\n",
+    "Therefore, to get a probability per nm$^2$ we have to divide the cross-section in barns by 10$^{10}$\n",
+    "\n",
+    "𝐼𝑒𝑑𝑔𝑒(𝛽,Δ𝐸)=𝑁𝐼𝑙𝑜𝑤−𝑙𝑜𝑠𝑠(𝛽,Δ𝐸)𝜎𝑒𝑑𝑔𝑒(𝛽,Δ𝐸)\n"
    ]
   },
   {
