--- a/Spectroscopy/CH4_07-Introduction_Core_Loss.ipynb
+++ b/Spectroscopy/CH4_07-Introduction_Core_Loss.ipynb
@@ -112,7 +112,7 @@
     "# pyTEMlib setup ------------------\n",
     "else:\n",
     "    if test_package('sidpy') < '0.0.5':\n",
-    "        print('installing pyTEMlib')\n",
+    "        print('installing sidpy')\n",
     "        !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "    if test_package('pyTEMlib') < '0.2021.4.20':\n",
     "        print('installing pyTEMlib')\n",
