Added Analysis of EELS spectra notebook CH4-09

--- a/Spectroscopy/CH4_00-Spectroscopy.ipynb
+++ b/Spectroscopy/CH4_00-Spectroscopy.ipynb
@@ -40,7 +40,7 @@
     "**Core-Loss EELS**\n",
     "* [Introduction to Core-Loss Spectroscopy](CH4_07-Introduction_Core_Loss.ipynb)\n",
     "* [Chemical Composition](CH4_08-Chemical_Composition.ipynb)\n",
-    "* [Analysing Core-Loss Spectra](CH4_9-Analyse_Core_Loss.ipynb)\n",
+    "* [Analysing Core-Loss Spectra](CH4_09-Analyse_Core_Loss.ipynb)\n",
     "* [Electron Energy-Loss Near-Edge Structure](CH4_10-ELNES.ipynb)\n",
     "\n",
     "## Electron Dispersive Spectrosocpy\n"
