changes to ase based crystall tools

--- a/Introduction/CH1_03-Data_Representation.ipynb
+++ b/Introduction/CH1_03-Data_Representation.ipynb
@@ -14,17 +14,13 @@
     "<font size = \"5\"> Image-Data Representations in the Computer for Microscopists</font>\n",
     "\n",
     "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM//main/Introduction/CH1_03-Data_Representation.ipynb)\n",
-    " \n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
-    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Introduction/CH1_03-Data_Representation.ipynb)\n",
-    "\n",
     "\n",
     "part of \n",
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Spring 2021\n",
-    "\n",
+    "by Gerd Duscher, Spring 2022\n",
+    "<br>\n",
     "Microscopy Facilities<br>\n",
     "Joint Institute of Advanced Materials<br>\n",
     "Materials Science & Engineering<br>\n",
@@ -51,7 +47,7 @@
     "\n",
     "***\n",
     "\n",
-    "There is only one command necesary to load the functionality of both packages (numpy and matplotlib) which is done in the code cell below. Every notebook in this series will start with that line."
+    "There is only one command necessary to load the functionality of both packages (numpy and matplotlib) which is done in the code cell below. Every notebook in this series will start with that line."
    ]
   },
   {
@@ -68,7 +64,7 @@
     }
    ],
    "source": [
-    "# import matplotlib and numpy with this **magic** comand\n",
+    "# import matplotlib and numpy with this **magic** command\n",
     "#                       use \"inline\" instead of \"notebook\" for non-interactive plots\n",
     "import sys\n",
     "if 'google.colab' in sys.modules:\n",
@@ -112,7 +108,7 @@
    "source": [
     "image = np.zeros((8,4))\n",
     "\n",
-    "#make checker board (you can ignore how this is done exactly, the result is important)\n",
+    "#make checkerboard (you can ignore how this is done exactly, the result is important)\n",
     "image[::2, 1::2] = 1\n",
     "image[1::2, ::2] = 1\n",
     "print(image)"
@@ -931,7 +927,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While you probably did not have a problem with the matrix representation of our boring image, you should have one now, because the x axis was the longer one.\n",
+    "While you probably did not have a problem with the matrix representation of our boring image, you should have one now, because the x-axis was the longer one.\n",
     "\n",
     "The problem comes from the different way data can be stored.\n",
     "\n",
@@ -941,7 +937,7 @@
     "\n",
     "So our perception requires the first index to be horizontally (the column index to be first) and the row index to be the second.\n",
     "\n",
-    "In mathematics, a matrix index starts with a row index and column indices are second. Exactly oposite to what we are used in microscopy.\n",
+    "In mathematics, a matrix index starts with a row index and column indices are second. Exactly opposite to what we are used in microscopy.\n",
     "\n",
     "\n",
     "$\n",
@@ -955,11 +951,11 @@
     "\n",
     "So we now have to choose, what kind of internal representation we use. And we need to consider what kind of internal representation the used python-packages choose. You will notice that most examples on the internet get around this problem by using square matrices and images, which leads sometimes to errors in non-square data, and leads often to subtle problems in image analysis.\n",
     "\n",
-    "As we see numpy uses the mathematical convention and most popular packages are compatible with numpy and use the same convention. If we would choose to internally stay with the fast direction as row in the numpy array, it get's confusing with switching x and y directions constantly. Therefore, ``pyTEMlib``, ``pycroscopy``, and ``pyNSID`` are using the storage method of slow axis first storage convention. \n",
+    "As we see numpy uses the mathematical convention and most popular packages are compatible with numpy and use the same convention. If we chose to internally stay with the fast direction as row in the numpy array, it gets confusing with switching x and y directions constantly. Therefore, ``pyTEMlib``, ``pycroscopy``, and ``pyNSID`` are using the storage method of slow axis first storage convention.\n",
     "\n",
-    "In other words, in the notebooks of this course, we will rotate output and stay with mathematic indexing internally. This makes the computation consistent with all numpy based packages and there are many. The [scipy](https://www.scipy.org/), [scikit-image](https://scikit-image.org/), and [scikit-learn](https://scikit-learn.org/stable/) are the most used (collection of) packages used in this notebook-lecture series. We stay  very ``pythonic`` with this convention.\n",
+    "In other words, in the notebooks of this course, we will rotate output and stay with mathematics indexing internally. This makes the computation consistent with all numpy based packages and there are many. The [scipy](https://www.scipy.org/), [scikit-image](https://scikit-image.org/), and [scikit-learn](https://scikit-learn.org/stable/) are the most used (collection of) packages used in this notebook-lecture series. We stay  very ``pythonic`` with this convention.\n",
     "\n",
-    "*Turning* the image can be accomplished by a ``.T`` command of numpy arrays, which is the transposed of a matrix $M^T$. Please note, that numpy is smart enought to leave the stored data alone and just change the way the data are read (look up strides and numpy  for more information)."
+    "*Turning* the image can be accomplished by a ``.T`` command of numpy arrays, which is the transposed of a matrix $M^T$. Please note, that numpy is smart enough to leave the stored data alone and just change the way the data are read (look up strides and numpy  for more information)."
    ]
   },
   {
@@ -1776,9 +1772,9 @@
    "source": [
     "## Using the ``Pythonic`` Convention\n",
     "\n",
-    "This convention chosen allows us to adress the image content naturally, here we select the pixel at x-axis 4 and y-axis 1\n",
+    "This convention chosen allows us to address the image content naturally, here we select the pixel at x-axis 4 and y-axis 1\n",
     "\n",
-    "In the example below, also a line is plotted which needs the ``x`` coordinates first and the ``y`` coordinates (as a list ``[ ... ]`` or numpy ``array``.\n",
+    "In the example below, also a line is plotted which needs the ``x`` coordinates first and the ``y`` coordinates (as a list ``[ ... ]`` or numpy ``array``).\n",
     "\n",
     "The same coordinates are used  to put markers in the image."
    ]
@@ -2598,11 +2594,11 @@
     "### Relative Scale\n",
     "Generally, it is recommended to use the field of view (length of axis times pixel-size in that direction) as the extent and the starting point is zero. \n",
     "\n",
-    "The dfference to most online code is that we set the field of view (FOV) of the y-axis first, to start the top left at 0 as it is custom in microscopy.\n",
+    "The difference to most online code is that we set the field of view (FOV) of the y-axis first, to start the top left at 0 as it is custom in microscopy.\n",
     "\n",
-    "The pixel size is accurate in that way. Adressing and plotting other parameters on top of the image will be in the scale expressed with the extent parematers. \n",
+    "The pixel size is accurate in that way. Addressing and plotting other parameters on top of the image will be in the scale expressed with the extent parameters.\n",
     "\n",
-    "However that there is a slight problem with the origin and the coordinate reference of a pixel, which will be discussed in the next subsection.\n"
+    "However, that there is a slight problem with the origin and the coordinate reference of a pixel, which will be discussed in the next subsection.\n"
    ]
   },
   {
@@ -3409,10 +3405,10 @@
     "image_extent = [0,FOV_x,FOV_y, 0]\n",
     "\n",
     "plt.figure()\n",
-    "plt.imshow(image.T, extent = image_extent, cmap = plt.cm.gray);\n",
+    "plt.imshow(image.T, extent = image_extent, cmap = plt.cm.gray)\n",
     "\n",
     "plt.plot(np.array([0,4])*scale_x, np.array([0,1])*scale_y, color='orange')\n",
-    "## while above coordinates are translated from pixel, next we use directly image corrdinates\n",
+    "## while above coordinates are translated from pixel, next we use directly image coordinates\n",
     "plt.scatter([0,40],[0,10],color='blue');"
    ]
   },
@@ -3426,7 +3422,7 @@
     "\n",
     "Plotting a line  from pixel [0,0] to pixel [4,1] however reveals that the origin of the pixels moved from the center to the top left corner. \n",
     "\n",
-    "This is ususally not a problem however it can lead to problems in plotting of parameters with subpixel accuracy, where the origin of the matrix pixel is regarded ``at the center``.\n",
+    "This is usually not a problem however it can lead to problems in plotting of parameters with subpixel accuracy, where the origin of the matrix pixel is regarded ``at the center``.\n",
     "\n",
     "The correct scale needs to be shifted by half a pixel:\n"
    ]
@@ -4237,10 +4233,10 @@
     "image_extent = (np.array([0,image.shape[0],image.shape[1], 0])-0.5)*(scale_x,scale_x,scale_y,scale_y)\n",
     "\n",
     "plt.figure()\n",
-    "plt.imshow(image.T, extent = image_extent, cmap = plt.cm.gray);\n",
+    "plt.imshow(image.T, extent = image_extent, cmap = plt.cm.gray)\n",
     "\n",
     "plt.plot(np.array([0,4])*scale_x, np.array([0,1])*scale_y, color='orange')\n",
-    "## while above coordinates are translated from pixel here we use directly image corrdinates\n",
+    "## while above coordinates are translated from pixel here we use directly image coordinates\n",
     "plt.scatter([0,40],[0,10],color='blue'); "
    ]
   },
@@ -4252,9 +4248,9 @@
     "\n",
     "So internally we use the mathematical convention of matrices and all we have to take care of is that the output plot of the image is the right kind around. \n",
     "\n",
-    "For aboslute pixel positions we need to shift the ``grid`` by half a pixel to keep the pixel origin in the center of the pixels.\n",
+    "For absolute pixel positions we need to shift the ``grid`` by half a pixel to keep the pixel origin in the center of the pixels.\n",
     "\n",
-    "The advantage of this approach is that no other effort has to be spent to keep track on what axis is where, which can get cumbersom in mulidimensional datasets."
+    "The advantage of this approach is that no other effort has to be spent to keep track on what axis is where, which can get cumbersome in multidimensional datasets."
    ]
   },
   {
@@ -4262,7 +4258,7 @@
    "metadata": {},
    "source": [
     "## Navigation:\n",
-    "- **Back: [Installation and Prerequesites](CH1_02-Prerequisites.ipynb)**\n",
+    "- **Back: [Installation and Prerequisites](CH1_02-Prerequisites.ipynb)**\n",
     "- **Next: [Open a (DM) file ](CH1_04-Open_File.ipynb)**\n",
     "- **[Front](../_MSE672_Intro_TEM.ipynb)**"
    ]
