--- a/_MSE672_Intro_TEM.ipynb
+++ b/_MSE672_Intro_TEM.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "\n",
     "You can [download all files](https://github.com/gduscher/MSE672-Introduction-to-TEM/archive/main.zip)\n",
-    "from github as a zip file."
+    "from GitHub as a zip file."
    ]
   },
   {
@@ -40,17 +40,13 @@
     "\n",
     "* **Chapter 1: [Introduction](./Introduction/CH1_00-Introduction.ipynb)**\n",
     "    * [Python as it is used here](./Introduction/CH1_01-Introduction_Python.ipynb)\n",
-    "    * [Installation and Prerequesites](./Introduction/CH1_02-Prerequisites.ipynb)\n",
+    "    * [Installation and Prerequisites](./Introduction/CH1_02-Prerequisites.ipynb)\n",
     "    * [Matplotlib and Numpy for Micrographs](./Introduction/CH1_03-Data_Representation.ipynb)\n",
-    "    * [Open a (DM) file ](./Introduction/CH1_04-Open_File.ipynb)-[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
-    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Introduction/CH1_04-Open_File.ipynb)\n",
+    "    * [Open a (DM) file ](./Introduction/CH1_04-Open_File.ipynb)\n",
     "    * *Course*\n",
-    "    * [Course Organization](./Introduction/CH1_05-Course_Organization.ipynb) [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
-    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Introduction/CH1_05-Course_Organization.ipynb)\n",
-    "    * [Overview](./Introduction/CH1_06-Overview.ipynb) [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
-    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Introduction/CH1_06-Overview.ipynb)\n",
-    "    * [Electron-Optics](./Introduction/CH1_07-Electron-Optics.ipynb) [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
-    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Introduction/CH1_07-Electron-Optics.ipynb)\n",
+    "    * [Course Organization](./Introduction/CH1_05-Course_Organization.ipynb)\n",
+    "    * [Overview](./Introduction/CH1_06-Overview.ipynb)\n",
+    "    * [Electron-Optics](./Introduction/CH1_07-Electron-Optics.ipynb)\n",
     "\n",
     "---\n",
     "   \n",
@@ -68,13 +64,12 @@
     "    * [Relrod - Sample Geometry and Excitation Error](CH2_06b-Relrod.ipynb)\n",
     "    * [Plotting of Diffraction Pattern](CH2_07-Plotting_Diffraction_Pattern.ipynb)\n",
     "    * [Analyzing Spot Diffraction Pattern](CH2_08-Spot_Diffraction_Pattern.ipynb)\n",
-    "    * [Unic Cell Determination and Stereographic Projection](CH2_09-Unit_Cell.ipynb)\n",
+    "    * [Unit Cell Determination and Stereographic Projection](CH2_09-Unit_Cell.ipynb)\n",
     "    * [Kikuchi Lines](CH2_10-Kikuchi_Lines.ipynb)\n",
     "    * [HOLZ Lines](CH2_11-HOLZ_Lines.ipynb)\n",
     "    * [Lattice Determination with HOLZ](CH2_12-HOLZ_Example.ipynb) \n",
     "\n",
     " *Dynamic Scattering*\n",
-    "\n",
     "    * [Bloch Waves](CH2_D01-Bloch.ipynb)\n",
     "    * [Multislice Algorithm](CH2_D02-Multislice.ipynb)\n",
     "    * [CBED with Multisice](CH2_D03-Multislice_CBED.ipynb)\n",
@@ -129,10 +124,10 @@
    "source": [
     "## Introduction to Python as it is used in this book\n",
     "\n",
-    "First of all you do not need to program anything, however, you will have to change the values of input parameters inthe code cells. Of course, you are incouraged and to modify the code in order to explore the data analysis methods. \n",
+    "First of all, you do not need to program anything, however, you will have to change the values of input parameters in the code cells. Of course, you are encouraged and to modify the code in order to explore the data analysis methods.\n",
     "\n",
     "In this book, we will use the python program language.\n",
-    "For this language, a lot of packages are available that provide algorythms for all common mathematical and statistical needs.\n",
+    "For this language, a lot of packages are available that provide algorithms for all common mathematical and statistical needs.\n",
     "\n",
     "In this book we rely most heavily on the standard numerical and scientific library:<b> numpy and scipy </b>\n",
     "\n",
@@ -150,14 +145,14 @@
     "## An Example\n",
     "We will do a lot of vector algebra so as an example we want to compute the angle between two vectors, \n",
     "\n",
-    "which is calculated by trasnforming the dfinition of the dot product: $\\vec{a} \\cdot \\vec{b} = \\left| \\vec{a} \\right| \\left| \\vec{b} \\right| \\cos (\\theta) $\n",
+    "which is calculated by transforming the definition of the dot product: $\\vec{a} \\cdot \\vec{b} = \\left| \\vec{a} \\right| \\left| \\vec{b} \\right| \\cos (\\theta) $\n",
     "\n",
     "$$ \\theta = \\arccos\\left( \\frac{\\vec{a} \\cdot \\vec{b}}{\\left| \\vec{a} \\right| \\left| \\vec{b} \\right|} \\right)$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -173,8 +168,8 @@
     "import numpy as np\n",
     "\n",
     "# We define the two vectors\n",
-    "a_vector = [1,1,2]\n",
-    "b_vector = [0,2,1]\n",
+    "a_vector = [1, 1, 2]\n",
+    "b_vector = [0, 2, 1]\n",
     "\n",
     "# calculate the lengths of the vectors\n",
     "a_length = np.linalg.norm(a_vector)\n",
@@ -190,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please refer to the [Python as it is used here](CH1-Introduction_Python.ipynb) notebook for more information.\n"
+    "Please refer to the [Python as it is used here](CH1_01-Introduction_Python.ipynb) notebook for more information.\n"
    ]
   },
   {
@@ -199,15 +194,15 @@
    "source": [
     "## Libraries and Classes\n",
     "\n",
-    "The functions introduced in this book are also organized in a package. The package is named [pyTEMlib](https://github.com/gduscher/pyTEMlib) and can be downloaded from github (no pip installation at this point in time).\n",
+    "The functions introduced in this book are also organized in a package. The package is named [pyTEMlib](https://github.com/gduscher/pyTEMlib) and can be downloaded from GitHub (no pip installation at this point in time).\n",
     "\n",
     "\n",
     "For a more modern programming approach they could also be grouped in classes, but classes  put another layer between notebook and code, which is desirable for abstraction but not necessarily for understanding.\n",
     "\n",
     "So for the course of this book the functions will be made available in libraries, which can be wrapped in classes for a more monolithic program.\n",
     "\n",
-    "A graphical user interface (GUI) was conciously omitted in this book to encourage the user to mess around in the code.\n",
-    "So please change theparameters and see what happens.\n",
+    "A graphical user interface (GUI) was consciously omitted in this book to encourage the user to mess around in the code.\n",
+    "So please change parameters and see what happens.\n",
     "\n",
     "## A word of caution:\n",
     "A notebook can become confusing if one does not go through it in a sequential way, because the values of parameters can be changed at any stage in any code cell without the other cells having any knowledge about the order in which the cells are activated.\n",
