--- a/Diffraction/CH2_01-Electron.ipynb
+++ b/Diffraction/CH2_01-Electron.ipynb
@@ -16,19 +16,15 @@
     "\n",
     "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM//main/Diffraction/CH2_01-Electron.ipynb)\n",
     " \n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
-    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Diffraction/CH2_01-Electron.ipynb)\n",
-    "\n",
-    "\n",
     "\n",
     "part of \n",
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Spring 2021\n",
+    "by Gerd Duscher, Spring 2022\n",
     "\n",
     "Microscopy Facilities<br>\n",
-    "Joint Institute of Advanced Materials<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
     "Materials Science & Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
     "\n",
@@ -47,13 +43,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "installing pyTEMlib\n",
+      "installing SciFiReaders\n",
       "done\n"
      ]
     }
@@ -75,8 +73,11 @@
     "    !pip install pyTEMlib -q\n",
     "# pyTEMlib setup ------------------\n",
     "else:\n",
-    "    if test_package('pyTEMlib') < '0.2021.1.9':\n",
+    "    if test_package('pyTEMlib') < '0.2021.12.1':\n",
     "        print('installing pyTEMlib')\n",
+    "        !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
+    "    if test_package('SciFiReaders') < '0.3':\n",
+    "        print('installing SciFiReaders')\n",
     "        !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "# ------------------------------\n",
     "print('done')"
@@ -86,12 +87,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load the plotting and figure packages"
+    "### Load the plotting and figure packages\n",
+    "Please use\n",
+    "- %pylab widgets in jupyter lab and \n",
+    "- %pylab inline in Google C\n",
+    "olab\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,11 +108,7 @@
     }
    ],
    "source": [
-    "import sys\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    %pylab --no-import-all inline\n",
-    "else:\n",
-    "    %pylab --no-import-all notebook\n",
+    "%pylab notebook\n",
     "\n",
     "import scipy.constants as const  #scientific constants"
    ]
@@ -876,7 +877,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -890,7 +891,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.12"
   },
   "toc": {
    "base_numbering": 1,
@@ -912,5 +913,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
