--- a/Diffraction/Ch2_00-Diffraction.ipynb
+++ b/Diffraction/Ch2_00-Diffraction.ipynb
@@ -16,14 +16,14 @@
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
     "\n",
-    "by Gerd Duscher, Spring 2021\n",
+    "by Gerd Duscher, Spring 2022\n",
     "\n",
     "Microscopy Facilities<br>\n",
-    "Joint Institute of Advanced Materials<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
     "Materials Science & Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
     "\n",
-    "Background and methods to analysis and quantification of data acquired with transmission electron microscopes."
+    "Background and methods to analysis and quantification of data acquired with transmission electron microscopes.\n"
    ]
   },
   {
@@ -183,7 +183,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -197,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   },
   "toc": {
    "base_numbering": 1,
@@ -214,5 +214,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
