--- a/Introduction/CH1_03-Data_Representation.ipynb
+++ b/Introduction/CH1_03-Data_Representation.ipynb
@@ -115,6 +115,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 1. 0. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(image[0,:])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4273,7 +4290,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4287,7 +4304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.12"
   },
   "toc": {
    "base_numbering": "4",
