--- a/Introduction/CH1_00-Introduction.ipynb
+++ b/Introduction/CH1_00-Introduction.ipynb
@@ -11,22 +11,17 @@
     "\n",
     "# Introduction to this Jupyter Lecture Notebook-Book\n",
     "\n",
-    "\n",
     "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM//main/Introduction/CH1_00-Introduction.ipynb)\n",
-    " \n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
-    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Introduction/CH1_00-Introduction.ipynb)\n",
-    "    \n",
     "\n",
     "part of \n",
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
     "\n",
-    "by Gerd Duscher, Spring 2021\n",
+    "by Gerd Duscher, Spring 2022\n",
     "\n",
     "Microscopy Facilities<br>\n",
-    "Joint Institute of Advanced Materials<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
     "Materials Science & Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
     "\n",
@@ -41,19 +36,19 @@
     "\n",
     "This notebook-book, -course, -series, or whatever you want ot call it is a collection fo jupyter notebooks to analyse the various data which can be acquired with a transmission electron microscope (TEM).\n",
     "\n",
-    "First of all, **you do not need to program anything**, however, you will have to change the values of input parameters in the code cells. Of course, you are encouraged to modify the code in order to explore the data analysis methods, what can go wrong? \n",
+    "First, **you do not need to program anything**, however, you will have to change the values of input parameters in the code cells. Of course, you are encouraged to modify the code in order to explore the data analysis methods, what can go wrong?\n",
     "\n",
-    "The advantage of jupyter notebooks is that it is a combination fo the usual textbook and the data analysis software. The intent of the book is not to make a cool graphic user interface with a fast data analysis but to make it obvious what numerical and physical means are used to extract quantitative values from these data.\n",
+    "The advantage of jupyter notebooks is that it is a combination of an usual textbook and data-analysis software. The intent of the book is not to make a cool graphic user interface with a fast data analysis but to make it obvious what numerical and physical means are used to extract quantitative values from these data.\n",
     "\n",
     "\n",
     "## Content\n",
-    "This (note-) book is divided in the following sections:\n",
+    "This (note-)book is divided in the following sections:\n",
     "\n",
     "* **Chapter 1: [Introduction](CH1_00-Introduction.ipynb)**\n",
     "    * [Python as it is used here](CH1_01-Introduction_Python.ipynb)\n",
-    "    * [Installation and Prerequesites](CH1_02-Prerequisites.ipynb)\n",
+    "    * [Installation and Prerequisites](CH1_02-Prerequisites.ipynb)\n",
     "    * [Matplotlib and Numpy for Micrographs](CH1_03-Data_Representation.ipynb)\n",
-    "    * [Open a (DM) file ](CH1_04-Open_Files.ipynb)\n",
+    "    * [Open a (DM) file ](CH1_04-Open_File.ipynb)\n",
     "    * *Course Material*\n",
     "    * [Course Organization](CH1_05-Course_Organization.ipynb)\n",
     "    * [Overview](CH1_06-Overview.ipynb)\n",
