--- a/Introduction/CH1_02-Prerequisites.ipynb
+++ b/Introduction/CH1_02-Prerequisites.ipynb
@@ -12,9 +12,6 @@
     "# Prerequisites\n",
     "\n",
     "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM//main/Introduction/CH1_02-Prerequisites.ipynb)\n",
-    " \n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
-    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Introduction/CH1_02-Prerequisites.ipynb)\n",
     "\n",
     "\n",
     "\n",
@@ -22,10 +19,10 @@
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Spring 2021\n",
+    "by Gerd Duscher, Spring 2022\n",
     "\n",
     "Microscopy Facilities<br>\n",
-    "Joint Institute of Advanced Materials<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
     "Materials Science & Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
     "\n",
@@ -40,7 +37,7 @@
     "## Language\n",
     "The notebooks are all in python 3. \n",
     "\n",
-    "At this point the common version is python 3.7"
+    "At this point the common version is python 3.9"
    ]
   },
   {
@@ -48,7 +45,7 @@
    "metadata": {},
    "source": [
     "## Packages\n",
-    "The idea behind any python program is to make use of the hghly efficient libraries that already exist.\n",
+    "The idea behind any python program is to make use of the highly efficient libraries that already exist.\n",
     "\n",
     "I use [anaconda3](https://www.anaconda.com/distribution/) (not miniconda) which is available for all major operating systems.\n",
     "\n",
@@ -65,13 +62,12 @@
     "* [Matplotlib](https://www.matplotlib.org/) the interactive plotting library \n",
     "\n",
     "\n",
-    "These notebooks are expected to be installed on your computer to run the notebooks of this book.\n",
-    "\n",
+    "These packages are expected to be installed on your computer to run the notebooks of this book.\n",
     "\n",
     "For specialist applications we do not reinvent the wheel and use those on an as needed basis.\n",
     "Example is the library to register a stack of images:\n",
     "* [SimpleITK](https://www.simpleitk.org)\n",
-    "integration of AI in image analysis and for high performing computer algrothyms\n",
+    "integration of AI in image analysis and for high performing computer algorithms\n",
     "* [pyNSID](https://pycroscopy.github.io/pyNSID/about.html)\n",
     "the atomistic simulation program is used for crystallographic data\n",
     "* [ase](https://wiki.fysik.dtu.dk/ase/)\n",
@@ -79,7 +75,7 @@
     "* [spglib](https://atztogo.github.io/spglib/)\n",
     "\n",
     "\n",
-    "For dialogs we use the capabilities provided by:\n",
+    "For dialogs, we use the capabilities provided by:\n",
     "* [PyQt5](https://www.riverbankcomputing.com/software/pyqt/intro)\n",
     "\n",
     "All routines that are introduced in the notebooks are also available (for analysis) in the provided package  \n",
@@ -88,6 +84,36 @@
     "\n",
     "If you install **[pyTEMlib](#TEM-Library)** with the code cell below all packages you need for this book will be installed."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Basic Installation of Python Environment\n",
+    "\n",
+    "I recommend to install the free **anaconda3** from this [link](https://www.anaconda.com/products/individual).\n",
+    "\n",
+    "If you have an old version of anaconda, please reinstall the new version.\n",
+    "The package is based on fairly new packages of scipy and numpy, dask, and h5py, which will create problems in old version.\n",
+    "\n",
+    "Once you have installed anaconda\n",
+    "- open the anaconda power shell prompt\n",
+    "- and type:\n",
+    ">conda install -c conda-forge ase\n",
+    "\n",
+    "You are set to go on from here toopen jupyter notebook server.\n",
+    "\n",
+    "Optionally you can install two other packages that were introduced above:\n",
+    "- type in the power shell:\n",
+    "> conda install -c simpleitk simpleitk\n",
+    ">\n",
+    "> conda install -c conda-forge spglib"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -109,17 +135,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "# import matplotlib and numpy with this **magic** comand\n",
     "#                       use \"inline\" instead of \"notebook\" for non-interactive plots\n",
-    "import sys\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    %pylab --no-import-all notebook\n",
-    "else:      \n",
-    "    %pylab --no-import-all widget\n",
-    "    %gui qt\n"
+    "#                       use \"widget\" instead of \"notebook\" for jupyter lab\n",
+    "%pylab --no-import-all notebook\n",
+    "%gui qt\n"
    ]
   },
   {
@@ -138,7 +165,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "pycharm": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "source": [
@@ -165,7 +195,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "pycharm": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "source": [
@@ -180,38 +213,38 @@
     "        version = '-1'\n",
     "    return version\n",
     "\n",
-    "# Colab setup ------------------\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    !pip install pyTEMlib -q\n",
-    "\n",
     "# pyTEMlib setup ------------------\n",
-    "else:\n",
-    "    if test_package('pyTEMlib') < '0.2021.1.9':\n",
-    "        print('installing pyTEMlib')\n",
-    "        !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
+    "if test_package('pyTEMlib') < '0.2021.12.1':\n",
+    "    print('installing pyTEMlib')\n",
+    "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "# ------------------------------\n",
     "print('done')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "import pyTEMlib\n",
-    "print(f'pyTEM version: {pyTEMlib.__version__}')"
-   ]
+    "Now we load pyTEMlib to make it available for this notebook."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "# get rid of annoying update pip installer\n",
-    "!{sys.executable} -m pip install --upgrade pip\n"
+    "import pyTEMlib\n",
+    "print(f'pyTEM version: {pyTEMlib.__version__}')"
    ]
   },
   {
@@ -225,10 +258,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
-    "import pyTEMlib.KinsCat as ks # Import kinematic sCattering Library fromt he pyTEMlib\n",
+    "import pyTEMlib.kinematic_scattering as ks # Import kinematic sCattering Library fromt he pyTEMlib\n",
     "\n",
     "# make a structure dictionary\n",
     "tags = ks.structure_by_name('Graphite')\n",
@@ -283,94 +320,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Known nbextensions:\n",
-      "  config dir: C:\\Users\\gduscher\\.jupyter\\nbconfig\n",
-      "    notebook section\n",
-      "      mayavi/x3d/x3dom enabled \n",
-      "      jupyter-js-widgets/extension enabled \n",
-      "      jupyter-widget-chemview/extension enabled \n",
-      "      fileupload/extension enabled \n",
-      "      hide_code/hide_code enabled \n",
-      "      calysto/document-tools/main enabled \n",
-      "      nbextensions_configurator/config_menu/main enabled \n",
-      "      toc2 enabled \n",
-      "      contrib_nbextensions_help_item/main enabled \n",
-      "      toc2/main enabled \n",
-      "      varInspector/main disabled\n",
-      "      vispy/extension enabled \n",
-      "      equation-numbering/main enabled \n",
-      "    tree section\n",
-      "      nbextensions_configurator/tree_tab/main enabled \n",
-      "  config dir: C:\\Users\\gduscher\\Anaconda3\\etc\\jupyter\\nbconfig\n",
-      "    notebook section\n",
-      "      jupyter-matplotlib/extension enabled \n",
-      "      jupyter-js-widgets/extension enabled "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "      - Validating: ok\n",
-      "      - Validating: ok\n",
-      "      - Validating: problems found:\n",
-      "        - require?  X jupyter-widget-chemview/extension\n",
-      "      - Validating: problems found:\n",
-      "        - require?  X fileupload/extension\n",
-      "      - Validating: problems found:\n",
-      "        - require?  X hide_code/hide_code\n",
-      "      - Validating: problems found:\n",
-      "        - require?  X calysto/document-tools/main\n",
-      "      - Validating: problems found:\n",
-      "        - require?  X nbextensions_configurator/config_menu/main\n",
-      "      - Validating: problems found:\n",
-      "        - require?  X toc2\n",
-      "      - Validating: ok\n",
-      "      - Validating: ok\n",
-      "      - Validating: problems found:\n",
-      "        - require?  X vispy/extension\n",
-      "      - Validating: ok\n",
-      "      - Validating: problems found:\n",
-      "        - require?  X nbextensions_configurator/tree_tab/main\n",
-      "      - Validating: ok\n",
-      "      - Validating: ok\n",
-      "      - Validating: problems found:\n",
-      "        - require?  X nbextensions_configurator/config_menu/main\n",
-      "      - Validating: ok\n",
-      "      - Validating: problems found:\n",
-      "        - require?  X nbextensions_configurator/tree_tab/main\n",
-      "      - Validating: problems found:\n",
-      "        - require?  X nbextensions_configurator/config_menu/main\n",
-      "      - Validating: ok\n",
-      "      - Validating: problems found:\n",
-      "        - require?  X nbextensions_configurator/tree_tab/main\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "      nbextensions_configurator/config_menu/main enabled \n",
-      "      contrib_nbextensions_help_item/main enabled \n",
-      "    tree section\n",
-      "      nbextensions_configurator/tree_tab/main enabled \n",
-      "  config dir: C:\\ProgramData\\jupyter\\nbconfig\n",
-      "    notebook section\n",
-      "      nbextensions_configurator/config_menu/main enabled \n",
-      "      contrib_nbextensions_help_item/main enabled \n",
-      "    tree section\n",
-      "      nbextensions_configurator/tree_tab/main enabled \n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# Install a pip package in the current Jupyter kernel\n",
     "import sys\n",
@@ -387,7 +343,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -403,21 +363,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Enabling notebook extension toc2...\n",
-      "      - Validating: problems found:\n",
-      "        - require?  X toc2\n"
-     ]
+    "scrolled": true,
+    "pycharm": {
+     "is_executing": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "\n",
     "!{sys.executable} -m  jupyter nbextension enable toc2"
@@ -426,7 +379,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "%%javascript\n",
