--- a/Introduction/CH1_01-Introduction_Python.ipynb
+++ b/Introduction/CH1_01-Introduction_Python.ipynb
@@ -12,20 +12,16 @@
     "# Introduction to Python as it is used in this lecture\n",
     "\n",
     "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM//main/Introduction/CH1_01-Introduction_Python.ipynb)\n",
-    " \n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
-    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Introduction/CH1_01-Introduction_Python.ipynb)\n",
-    "\n",
     "\n",
     "\n",
     "part of \n",
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Fall 2021\n",
+    "by Gerd Duscher, Spring 2022\n",
     "\n",
     "Microscopy Facilities<br>\n",
-    "Joint Institute of Advanced Materials<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
     "Materials Science & Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
     "\n",
@@ -37,10 +33,10 @@
    "metadata": {},
    "source": [
     "## Coding\n",
-    "First of all, **you do not need to program anything**, however, you will have to change the values of input parameters in the code cells. Of course, you are encouraged to modify the code in order to explore the data analysis methods, what can go wrong. \n",
+    "First, **you do not need to program anything**, however, you will have to change the values of input parameters in the code cells. Of course, you are encouraged to modify the code in order to explore the data analysis methods, what can go wrong.\n",
     "\n",
     "In this book, we will use the python program language.\n",
-    "For this language, a lot of packages are available that provide algorythms for all common mathematical and statistical needs.\n",
+    "For this language, a lot of packages are available that provide algorithms for all common mathematical and statistical needs.\n",
     "\n",
     "In this book we rely most heavily on the standard numerical and scientific library:<b> numpy and scipy </b>\n",
     "\n",
@@ -136,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In crystallography we would use the normed (or unit) vectors $\\hat{a}$ and $\\hat{b}$ which are defined as  $\\hat{a} = \\frac{\\vec{a}}{\\left| \\vec{a} \\right|}$.\n",
+    "In crystallography, we would use the normed (or unit) vectors $\\hat{a}$ and $\\hat{b}$ which are defined as  $\\hat{a} = \\frac{\\vec{a}}{\\left| \\vec{a} \\right|}$.\n",
     "\n",
     "The dot product is then directly the cos of the angle: \n",
     "\n",
@@ -172,7 +168,7 @@
    "metadata": {},
    "source": [
     "## Functions\n",
-    "For a task you use more often you might want to define a function to do that task in a reproducable manner.\n",
+    "For a task you use more often you might want to define a function to do that task in a reproducible manner.\n",
     "\n",
     "In the remainder of the course most computer code in the code cell is also available in the TEMlib library to improve readability of the notebooks for analyzing data.\n",
     "\n",
@@ -245,8 +241,8 @@
     "\n",
     "While this may be a good idea to make a code more readable, this approach also hides a lot of what is going on in a program. Also, such a code tends to be rather splintered and one has to look layer by layer deeper if one wants to find out how something is calculated exactly.\n",
     "\n",
-    "Therefore in this course, we will use functions only for more complex issues and avoid wrapping.\n",
-    "Obviously, there are choices to be made and so the optimum may not always be striked. Please let me know any improvement you feel make things easier to grasp."
+    "Therefore, in this course, we will use functions only for more complex issues and avoid wrapping.\n",
+    "Obviously, there are choices to be made and so the optimum may not always be struck. Please let me know any improvement you feel make things easier to grasp."
    ]
   },
   {
@@ -321,13 +317,13 @@
     "\n",
     "So for the course of this course the functions will be made available in libraries, which can be wrapped in classes for a more monolithic program.\n",
     "\n",
-    "A graphical user interface (GUI) was conciously omitted in this course to encourage the user to mess around in the code.\n",
+    "A graphical user interface (GUI) was consciously omitted in this course to encourage the user to mess around in the code.\n",
     "So please change the vectors and see how the angle will change.\n",
     "\n",
     "## A word of caution:\n",
     "A notebook can become confusing, if one does not go through it in a sequential way, because the values of parameters can be changed at any stage in any code cell without the other cells having any knowledge about that.\n",
     "\n",
-    "A program or function will not have that kind of confusing tendency, and therefore, once we understand atopic,  a comprehensive function will be provided, like in the case of the angle function.\n",
+    "A program or function will not have that kind of confusing tendency, and therefore, once we understand a topic,  a comprehensive function will be provided, like in the case of the angle function.\n",
     "If in doubt, let the notebook run all the way through.\n"
    ]
   },
@@ -336,7 +332,7 @@
    "metadata": {},
    "source": [
     "## Navigation\n",
-    "- **Next: [Prerequesites](CH1_02-Prerequisites.ipynb)**\n",
+    "- **Next: [Prerequisites](CH1_02-Prerequisites.ipynb)**\n",
     "- **UP: [Chapter 1](CH1-00-Introduction.ipynb)**\n",
     "- **List of Content: [Front](../_MSE672_Intro_TEM.ipynb)**"
    ]
